--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.6.2
   flutter_svg: ^2.0.16
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
      - assets/fonts/
      - assets/icons/svg/
      - assets/images/jpg/
+     - assets/images/png/
      - assets/images/svg/
   #   - images/a_dot_ham.jpeg
 
