Fix routing to point to build/web

--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,11 @@
         "buildCommand": "bash ./build.sh"
       }
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/build/web/index.html"
+    }
   ]
 }
