--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^14.6.2
   flutter_svg: ^2.0.16
   url_launcher: ^6.3.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
